--- a/package.json
+++ b/package.json
@@ -1,23 +1,93 @@
 {
   "name": "linda",
+  "description": "Class scheduling tool",
   "version": "1.0.0",
-  "description": "A class scheduling webservice",
-  "main": "index.js",
+  "homepage": "",
+  "main": "src",
+  "keywords": [
+    "feathers"
+  ],
+  "nuxt": {
+    "host": "0.0.0.0",
+    "port": "3030"
+  },
+  "author": {
+    "name": "Tommy Flanagan",
+    "email": "tflanag2@nd.edu"
+  },
+  "contributors": [],
+  "bugs": {},
+  "directories": {
+    "lib": "src",
+    "test": "test/"
+  },
+  "engines": {
+    "node": ">= 6.0.0",
+    "yarn": ">= 0.18.0"
+  },
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run eslint && npm run mocha",
+    "eslint": "eslint src/. test/. --config .eslintrc.js",
+    "build": "nuxt build",
+    "dev": "DEBUG=nuxt:* nodemon --watch src/  --watch client/ --watch config/ src/index.js",
+    "prestart": "npm run build",
+    "start": "NODE_ENV=production node src/",
+    "mocha": "mocha test/ --recursive"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Quarke/linda.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Quarke/linda/issues"
-  },
-  "homepage": "https://github.com/Quarke/linda#readme",
   "dependencies": {
-    "express": "^4.16.1"
+    "axios": "^0.16.2",
+    "body-parser": "^1.18.0",
+    "cheerio": "^1.0.0-rc.2",
+    "compression": "^1.7.0",
+    "cors": "^2.8.4",
+    "css-loader": "^0.28.7",
+    "feathers": "^2.2.0",
+    "feathers-authentication": "^1.2.7",
+    "feathers-authentication-client": "^0.3.3",
+    "feathers-authentication-hooks": "^0.1.4",
+    "feathers-authentication-jwt": "^0.3.2",
+    "feathers-authentication-local": "^0.4.4",
+    "feathers-configuration": "^0.4.1",
+    "feathers-errors": "^2.9.2",
+    "feathers-hooks": "^2.0.2",
+    "feathers-hooks-common": "^3.7.2",
+    "feathers-mongodb": "^2.9.0",
+    "feathers-mongoose": "^5.1.2",
+    "feathers-rest": "^1.8.0",
+    "feathers-socketio": "^2.0.0",
+    "feathers-vuex": "^0.8.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "helmet": "^3.8.1",
+    "js-cookie": "^2.1.4",
+    "kue": "^0.11.6",
+    "lodash": "^4.17.4",
+    "mongodb": "^2.2.31",
+    "mongoose": "^4.11.14",
+    "normalize.css": "^7.0.0",
+    "nuxt": "^1.0.0-rc11",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.4.3",
+    "socket.io-client": "^2.0.3",
+    "style-loader": "^0.19.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "tmp": "^0.0.33",
+    "vuetify": "^0.15.7",
+    "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^3.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "mocha": "^3.5.3",
+    "nodemon": "^1.12.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
