--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,15 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Temp files
+*.swp
+*~
+dist/
+.dist/
+
+# Cookies, don't want this public
+cookies.txt
+
 # Runtime data
 pids
 *.pid
