--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "heroku-postbuild": "npm run generate"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "axios": "^0.16.2",
     "body-parser": "^1.18.0",
     "cheerio": "^1.0.0-rc.2",
@@ -69,6 +70,7 @@
     "normalize.css": "^7.0.0",
     "nuxt": "^1.0.0-rc11",
     "path": "^0.12.7",
+    "progress": "^2.0.0",
     "serve-favicon": "^2.4.3",
     "socket.io-client": "^2.0.3",
     "style-loader": "^0.19.0",
