use novo to fill out rest of tables

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ yarn-error.log*
 dist/
 .dist/
 
+# Temp data, gets stored in db
+*.json
+*.html
+
 # Cookies, don't want this public
 cookies.txt
 
