--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "feathers-rest": "^1.8.0",
     "feathers-vuex": "^0.8.0",
     "helmet": "^3.8.1",
+    "js-combinatorics": "^0.5.3",
     "js-cookie": "^2.1.4",
     "mongoose": "^4.11.14",
     "normalize.css": "^7.0.0",
